biao zhi xing de xia xing wan zhao shang xing qian zhao qian yi lian jie he nei sheng zhi neng de neng li jiang

--- a/date/2025-03/index.htm
+++ b/date/2025-03/index.htm
@@ -115,6 +115,96 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="机器学习系列：LightGBM 可视化调参">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">机器学习系列：LightGBM 可视化调参</h3>
+                            </a>
+                            <p class="about_text">大家好，在100天搞定机器学习|Day63 彻底掌握 LightGBM一文中，我介绍了LightGBM 的模型原理和一个极简实例。最近我发现Huggingface与Streamlit好像更配，所以就开</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="ruby 版本管理RVM （ruby version manager）">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">ruby 版本管理RVM （ruby version manager）</h3>
+                            </a>
+                            <p class="about_text">macOS. 自带的ruby 版本目录权限比较高， 经常有很多 操作需要权限而不能执行   虽然 macOS 自带了一个 ruby 环境，但是是系统自己使用的，所以权限很小，只有 system。   </p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了新加坡、美国、香港、日本、韩国、加拿大、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-23">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="动物医院需要几个兽医资格证才能进行体检（动物医院要求）">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">动物医院需要几个兽医资格证才能进行体检（动物医院要求）</h3>
+                            </a>
+                            <p class="about_text">摘要：       今天给各位分享动物医院需要几个兽医资格证才能进行体检的知识，其中也会对动物医院要求进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、请问:开.</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-23">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="宠物之家托运怎么收费（宠物托运咨询哪里）">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">宠物之家托运怎么收费（宠物托运咨询哪里）</h3>
+                            </a>
+                            <p class="about_text">摘要：       今天给各位分享宠物之家托运怎么收费的知识，其中也会对宠物托运咨询哪里进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、顺丰宠物托运怎么收费?.</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-23">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了加拿大、美国、日本、香港、新加坡、韩国、欧洲等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-03-22">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -175,98 +265,8 @@
                             <p class="about_text">摘要：       本篇文章给大家谈谈宠物猫疫苗多少钱一个针头，以及宠物猫接种疫苗多少钱对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打疫苗多少钱?2、...       </p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="Apache Tomcat如何高并发处理请求">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">Apache Tomcat如何高并发处理请求</h3>
-                            </a>
-                            <p class="about_text">介绍 作为常用的http协议服务器，tomcat应用非常广泛。tomcat也是遵循Servelt协议的，Servelt协议可以让服务器与真实服务逻辑代码进行解耦。各自只需要关注Servlet协议即可。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、香港、加拿大、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/9a0122327fa66b90ff72b270313cf8e6.webp" alt="宠物狗批发网站大全（宠物狗批发价格）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物狗批发网站大全（宠物狗批发价格）</h3>
-                            </a>
-                            <p class="about_text">摘要：       今天给各位分享宠物狗批发网站大全的知识，其中也会对宠物狗批发价格进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、什么网卖宠物狗2、...  </p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</h3>
-                            </a>
-                            <p class="about_text">摘要：       今天给各位分享宠物医院收费价目表猫癣的知识，其中也会对宠物医院治疗猫癣费用进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、东莞宠物医院收费.</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/818f2f93dcbeed0252bc858caff32aed.webp" alt="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了加拿大、日本、韩国、美国、香港、欧洲、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-19">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/f473c41fc227da7d258e0f7572adbd50.webp" alt="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</h3>
-                            </a>
-                            <p class="about_text">摘要：       今天给各位分享宠物粮食专卖店在哪里进货的知识，其中也会对宠物粮食专卖店在哪里进货好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店想.</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-03/page-2.htm">2</a></li><li><a href="/date/2025-03/page-3.htm">3</a></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li> <li><a href="/date/2025-03/page-2.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-03/page-2.htm">2</a></li><li><a href="/date/2025-03/page-3.htm">3</a></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li><li><a href="/date/2025-03/page-6.htm">6</a></li> <li><a href="/date/2025-03/page-2.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-69974.htm" title="宠物领养数据库设计图片（宠物领养数据库设计图片）">宠物领养数据库设计图片（宠物领养数据库设计图片）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-free-v2ray.htm" title="VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-8-node-share.htm" title="VPN网关 | 3月8日20.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN网关 | 3月8日20.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share-links.htm" title="VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点">VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-70891.htm" title="动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）">动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-75558.htm" title="宠物粮行业发展趋势图表（宠物粮食市场前景）">宠物粮行业发展趋势图表（宠物粮食市场前景）</a></li>
-                        <li class="py-2"><a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</a></li>
-                        <li class="py-2"><a href="/news/article-73540.htm" title="三国杀新品武将（三国杀新品武将推荐）">三国杀新品武将（三国杀新品武将推荐）</a></li>
+                        <li class="py-2"><a href="/news/article-76220.htm" title="python中脚本怎么执行sql语句？">python中脚本怎么执行sql语句？</a></li>
+                        <li class="py-2"><a href="/news/article-74884.htm" title="猫咪领养网广州（广州猫咪领养公众号）">猫咪领养网广州（广州猫咪领养公众号）</a></li>
+                        <li class="py-2"><a href="/news/article-71558.htm" title="宠物粮代理怎么拿（宠物粮代理加盟）">宠物粮代理怎么拿（宠物粮代理加盟）</a></li>
+                        <li class="py-2"><a href="/news/article-72217.htm" title="动物接种疫苗后多久产生抗体?（动物疫苗间隔时间）">动物接种疫苗后多久产生抗体?（动物疫苗间隔时间）</a></li>
+                        <li class="py-2"><a href="/news/article-75559.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-70259.htm" title="中国餐桌上的四大下酒菜是什么?（怎么可以错过）中华四大下酒菜，红高粱剧情，食功夫之美食大冒险，">中国餐桌上的四大下酒菜是什么?（怎么可以错过）中华四大下酒菜，红高粱剧情，食功夫之美食大冒险，</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点">VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">51</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                     </ul>
     </div>
